# WinGameAlpha

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  app.cpp  app.hpp  ball.cpp  ball.hpp  common.hpp  core.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  render_kernel.cl  render_objects.hpp  renderer.cpp  renderer.hpp  texture_manager.cpp  texture_manager.hpp  textures.hpp  utils.hpp  win_platform.cpp
